fix vertical alignment

--- a/src/app/games/games.component.css
+++ b/src/app/games/games.component.css
@@ -11,7 +11,6 @@
 }
 
 .content-yellow {
-    /* border: 5px solid var(--yellow);     */
     background-color: var(--yellow);
     color: var(--black);
 }
@@ -39,4 +38,5 @@
 
 h1 {
     color: var(--yellow);
+    margin-bottom: 0;
 }
